<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/white2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textAppearance="@style/title" />

    <android.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:paddingStart="15dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:paddingBottom="3dp"
        android:elevation="5dp"
        android:background="@drawable/seachview"/>

    <FrameLayout
        android:id="@+id/content1"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="10dp"
        android:elevation="5dp"
        android:background="@drawable/content">

        <TextView
            android:id="@+id/titleContent1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/titleConten1"
            android:textAppearance="@style/titleContent" />

        <TextView
            android:id="@+id/description1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:padding="5dp"
            android:text="@string/description1"
            android:justificationMode="inter_word"
            android:textAppearance="@style/descriptions" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/content2"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="10dp"
        android:elevation="5dp"
        android:background="@drawable/content">

        <TextView
            android:id="@+id/titleContent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/titleConten2"
            android:textAppearance="@style/titleContent" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:padding="5dp"
            android:text="@string/description2"
            android:justificationMode="inter_word"
            android:textAppearance="@style/descriptions" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/content3"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:elevation="5dp"
        android:background="@drawable/content"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/titleContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:gravity="left"
            android:padding="5dp"
            android:text="@string/titleConten3"
            android:textAppearance="@style/titleContent" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:gravity="top"
            android:padding="5dp"
            android:text="@string/description3"
            android:justificationMode="inter_word"
            android:textAppearance="@style/descriptions" />
    </FrameLayout>

</RelativeLayout>