<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/Explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/explanationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/explanationtitle"
                android:textAppearance="@style/titleContent"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:background="@drawable/explanationdescription">

                <TextView
                    android:id="@+id/explanationDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/explanation3"
                    android:justificationMode="inter_word"
                    android:textAppearance="@style/explanationDeskription"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-18dp"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/slidecommand">

                <TextView
                    android:id="@+id/slidecomend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/slidecommand"
                    android:textAppearance="@style/slidecomend" />
            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>